--- a/martian-client/build.gradle
+++ b/martian-client/build.gradle
@@ -3,6 +3,14 @@ plugins {
 	id 'maven-publish'
 }
 
+
+repositories {
+	maven {
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
+	}
+}
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
@@ -21,6 +29,8 @@ dependencies {
 
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
+
+	modImplementation include("io.github.cottonmc:LibGui:3.3.2+1.16.4")
 }
 
 processResources {
